--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@
 	margin: 0;
 	padding: 0;
 	font-family: Arial, sans-serif;
+	font-size: 1vw;
 }
 i{
 	color: #f1f1f1;
@@ -16,13 +17,15 @@ i{
 }
 #header{
 	width: 40vw;
-	font-size: 0.7292vw;
 	display: flex;
 	align-items: center;
 	margin-top: 0.78125vw;
 	margin-left: 44.43vw;
 	color: #f3f3f3;
 	opacity: 0.8;
+}
+#header p{
+	font-size: 0.7292em;
 }
 .images{
 	position: absolute;
@@ -62,10 +65,10 @@ i{
 	padding-right: 25px;
 }
 .fab{
-	font-size: 1.1458vw;
+	font-size: 1.1458em;
 }
 .fas{
-	font-size: 0.9375vw;
+	font-size: 0.9375em;
 }
 .shadedBox{
 	width: 70.36%;
@@ -81,7 +84,7 @@ i{
 	top: 20.46875vw;
 	margin-left: 20.78vw;
 	font-weight: bold;
-	font-size: 1.5625vw;
+	font-size: 1.5625em;
 	color: white;
 }
 .btn{
@@ -95,7 +98,7 @@ i{
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	font-size: 0.9375vw;
+	font-size: 0.9375em;
 }
 .switcher{
 	position: absolute;
@@ -118,7 +121,6 @@ i{
 .menu{
 	width: 39.58vw;
 	height: 2.292vw;
-	font-size: 0.9375vw;
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
@@ -128,11 +130,14 @@ i{
 	left: 37.5vw;
 	top: 2.656vw;
 }
+.menu p{
+	font-size: 0.9375em;
+}
 a{
 	text-decoration: none;
 }
 .hiddenMenu{
-	font-size: 0.7292vw;
+	font-size: 0.7292em;
 	line-height: 100%;
 	color: white;
 	background: #3397e2;
@@ -149,7 +154,6 @@ a{
 }
 .shownMenu{
 	display: flex;
-	/*opacity: 0.8;*/
 }
 .hiddenMenu:nth-of-type(2n-1){
 	left: 56vw;
@@ -176,7 +180,7 @@ a{
 #want{
 	position: absolute;
 	top: 87.8646vw;
-	height: calc(14.4271vw + 16.1458vw);
+	height: 14.4271vw;
 	width: 99vw;
 	background-image: url(jpg/footer_corals_mini.jpg);
 	background-size: 99vw auto;
@@ -189,7 +193,6 @@ a{
 }
 .typeOfTours h3{
 	display: inline-block;
-	font-size: 1.0417vw;
 }
 .clicked{
 	color: #fbd341;
@@ -242,17 +245,17 @@ a{
 	width: 16.8625vw;
 }
 .textBox h5{
-	font-size: 0.8854vw;
+	font-size: 0.8854em;
 	font-weight: bold;
 	margin: 1.3542vw 0 0 1.4583vw;
 }
 .textBox h6{
-	font-size: 0.7292vw;
+	font-size: 0.7292em;
 	margin-left: 1.4583vw;
 	font-weight: normal;
 }
 .textBox p{
-	font-size: 0.7292vw;
+	font-size: 0.7292em;
 	margin: 1.4583vw 0 0 1.4583vw;
 }
 .priceString{
@@ -260,7 +263,7 @@ a{
 	margin: 1.25vw 0 0 1.4583vw;
 }
 .priceString h4{
-	font-size: 1.0417vw;
+	font-size: 1.0417em;
 	font-weight: normal;
 	margin-top: 0.3125vw;
 }
@@ -280,16 +283,16 @@ a{
 }
 .priceString i{
 	color: black;
-	font-size: 0.625vw;
+	font-size: 0.625em;
 }
 
 h2{
 	margin-left: 0.3125vw;
-	font-size: 1.25vw;
+	font-size: 1.25em;
 	font-weight: bold;
 	text-transform: uppercase;
 }
-#advantages div{
+.wrap{
 	display: flex;
 	margin-top: 3.1771vw;
 	align-items: center;
@@ -297,9 +300,41 @@ h2{
 #advantages img{
 	width: 23.8542vw;
 }
-#advantages p{
+.line{
+	position: absolute;
+	top: 7.3958vw;
+	left: 59.3229vw;
+	width: 1px;
+	height: 10.15625vw;
+	background: #121212;
+	opacity: 0.1;
+}
+.scrollingDot{
+	position: absolute;
+	top: 7.3958vw;
+	left: 59.1146vw;
+	width: 8px;
+	height: 8px;
+	border-radius: 4px;
+	background: #fbd341;
+}
+.activeLine {
+	opacity: 1;
+	width: 2px;
+}
+.activeDot{
+	width: 10px;
+	height: 10px;
+	border-radius: 5px;
+	background: blue;
+}
+.container{
+	height: 10.15625vw;
+	overflow: hidden;
+}
+.container p{
 	margin-left: 4.7917vw;
-	font-size: 0.8333vw;
+	font-size: 0.8333em;
 	line-height: 150%;
 }
 #want h2{
@@ -324,24 +359,39 @@ h2{
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
-	font-size: 0.9375vw;
 }
 .contentBox1 input{
-	background: black;
 	color: white;
 	opacity: 0.6;
 	border: none;
 	border-bottom: 1px solid #676d77;
+	font-size: 0.9375em;
+}
+.contentBox1 p{
+	font-size: 0.9375em;
 }
 .contentBox1 .btn{
 	position: static;
 	margin-left: 0;
+	color: black;
+}
+.name{
+	width: 7.2917vw;
+	background: black;
+}
+.email{
+	width: 9.8958vw;
+	background: black;
+}
+.tel{
+	width: 7.8125vw;
+	background: black;
 }
 .onBottom{
 	background: white;
 	opacity: 1;
 	color: black;
-	font-size: 0.8333vw;
+	font-size: 0.8333em;
 	position: absolute;
 	top: 9.5vw;
 	z-index: 2;
@@ -353,17 +403,19 @@ h2{
 	margin-top: 0.78125vw;
 }
 footer{
-	position: fixed;
-	top: calc(100vh - 16.1458vw);
+	position: absolute;
+	top: 102vw;
 	height: 16.1458vw;
 	width: 99vw;
 	background: #22334d;
 	display: flex;
 	color: white;
-	font-size: 0.7292vw;
+}
+footer p{
+	font-size: 0.7292em;
 }
 footer h4{
-	font-size: 0.9375vw;
+	font-size: 0.9375em;
 	font-weight: bold;
 }
 footer p{
@@ -391,7 +443,7 @@ footer p{
 	width: 4.53125vw;
 }
 .column1 p{
-	font-size: 0.7292vw;
+	font-size: 0.7292em;
 	line-height: 171.43%;
 	margin-top: 0;
 }
@@ -431,4 +483,7 @@ footer p{
 }
 .column4 p:nth-of-type(2){
 	margin-top: 0.8854vw;
+}
+.invalid{
+	background: red;
 }
