--- a/main.css
+++ b/main.css
@@ -312,7 +312,7 @@ h2{
 .scrollingDot{
 	position: absolute;
 	top: 7.3958vw;
-	left: 59vw;
+	left: calc(59.3229vw - 4px);
 	width: 8px;
 	height: 8px;
 	border-radius: 4px;
